hello-go/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  labels:
    run: hello-go
spec:
  type: ClusterIP
  selector:
    run: hello-go
  ports:
    - port: 80
      targetPort: 80
