hello-go/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
      - hellogoproject.de
      secretName: hellogoproject-de-ingress-tls
  rules:
  - host: "api.hellogoproject.de"
    http:
      paths:
        - path: /hello-go(/(?!internal)(.*)|$)
          backend:
            serviceName: hello-go
            servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-go-internal-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /internal/$2
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: internal-endpoints-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - internal endpoint'
spec:
  tls:
    - hosts:
      - hellogoproject.de
      secretName: hellogoproject-de-ingress-tls
  rules:
  - host: "api.hellogoproject.de"
    http:
      paths:
        - path: /hello-go/internal(/(.*)|$)
          backend:
            serviceName: hello-go
            servicePort: 80
